base/001-core-ui/fuse-001-core-ui-deployment.yaml
kind: DeploymentConfig
apiVersion: apps.openshift.io/v1
metadata:
  name: mdo-core-ui
spec:
  strategy:
    type: Rolling
    rollingParams:
      updatePeriodSeconds: 1
      intervalSeconds: 1
      timeoutSeconds: 600
      maxUnavailable: 25%
      maxSurge: 25%
    resources: {}
    activeDeadlineSeconds: 21600
  triggers:
    - type: ConfigChange
  replicas: 1
  revisionHistoryLimit: 10
  test: false
  selector:
    app: mdo-core-ui
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: mdo-core-ui
    spec:
      containers:
        - name: mdo-core-ui
          image: >-
            docker-push.prospecta.com/prospecta/mdo-analytics:development
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: IfNotPresent
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      imagePullSecrets:
        - name: nexus-image-pull
      securityContext: {}
      schedulerName: default-scheduler
---
