base/001-core-ui/fuse-001-core-ui-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: mdo-core-ui
  name: mdo-core-ui
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: mdo-core-ui
---
